attempt to fix spacing issue in index overlays

--- a/less/tumblr.less
+++ b/less/tumblr.less
@@ -735,9 +735,8 @@ ol.notes {
             position: absolute;
             bottom: -200px; left: 0;
 
-            p {
-                color: #fff;
-            }
+            p { color: #fff; }
+            a { display: block; }
         }
         .post_info { display: none; }
         &:hover .caption.excerpt {
